fix(ApiTesterView, ProjectView): remove dark background color for improved readability feat(Tabs): update active tab background color for better contrast in dark mode feat(styles): add dark mode background color for enhanced UI consistency

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -138,6 +138,10 @@ button {
     background-color: #000;
   }
 
+  .dark\:bg-gray-50 {
+    background-color: #333333;
+  }
+
   .dark\:bg-gray-60 {
     background-color: #262626;
   }
